# crossbar

./: .pre-commit-config.yaml  .tool-versions  MANIFEST.in  crossbar.json  pyproject.toml  requirements-min.txt  setup.py  tox.ini
.run/: wamp-router.run.xml
crossbar/: LICENSES-OSS  __init__.py  _compat.py  _log_categories.py  _logging.py  _util.py  _version.py  personality.py
crossbar/common/: checkconfig.py  fswatcher.py  key.py  monitor.py  process.py  processinfo.py  profiler.py  reloader.py
crossbar/newsfragments/: 1531.enhancement  1607.feature  208.bugfix
crossbar/node/: controller.py  guest.py  main.py  native.py  node.py  template.py  worker.py
crossbar/router/: broker.py  cookiestore.py  dealer.py  longpoll.py  observation.py  protocol.py  realmstore.py  role.py  router.py  service.py  session.py  unisocket.py  wildcard.py
crossbar/test/: __init__.py  test_checkconfig.py  test_logger.py
crossbar/twisted/: endpoint.py
crossbar/webservice/: archive.py  base.py  (+8 more)
docker/: Makefile
docs/: Application-Scenarios.rst  Authorization.rst  Automatic-Startup-and-Restart.rst  Basic-Concepts.rst  CGI-Script-Service.rst  Command-Line.rst  Cookie-Tracking.rst  File-Upload-Service.rst  Flash-Policy-Transport.rst  Getting-Started.rst  HTTP-Bridge-Callee.rst  HTTP-Bridge-Webhook.rst  How-Registrations-Work.rst  How-Subscriptions-Work.rst  Installation-on-Windows.rst  Installation.rst  JSON-Value-Service.rst  Makefile  Native-Worker-Options.rst  Node-Configuration-Example.rst  Node-Configuration.rst  Node-Info-Service.rst  Path-Service.rst  Processes.rst  RawSocket-Transport.rst  Router-Components.rst  Router-Configuration.rst  Router-Realms.rst  Setup-on-Amazon-EC2.rst  Static-Web-Service.rst  Stream-Testee.rst  WAMP-Features.rst  WSGI-Host-Service.rst  Web-Archive-Service.rst  Web-Redirection-Service.rst  Web-Transport-and-Services.rst  WebSocket-Options.rst  WebSocket-Service.rst  administration-guide.rst  basic-concept.rst  (+8 more)
docs-old/: markdown.py  test_server.py
scripts/: crossbar.sh  crossbar_docker_shell.sh  pack_build.sh  poetry_add.sh  poetry_add2.sh  poetry_add_dependencies.sh  poetry_rm_env.sh
test/: run_crossbar.py
(+117 files in other folders)
