[build]
  [[build.env]]
    name = "BP_CPYTHON_VERSION"
    value = "3.10.5" # any valid semver constraints (e.g. 3.6.7, 3.*) are acceptable
  [[build.env]]
    name = "BP_POETRY_VERSION"
    value = "1.2.0b3"
  [[build.env]]
    name = "BP_POETRY_RUN_TARGET"
    value = "crossbar"

[tool.poetry]
name = "crossbar"
version = "20.2.4"
description='Crossbar.io multi-protocol (WAMP/WebSocket, REST/HTTP, MQTT) application router for microservices.'
authors= ["Crossbar.io Technologies GmbH"]
license= "AGPL3"

[tool.poetry.dependencies]
python = "3.10.5"
attrs = "^22.1.0"
autobahn = "^22.7.1"
bitstring = "^3.1.9"
cbor = "^1.0.0"
click = "^8.1.3"
constantly = "^15.1.0"
cryptography = "^37.0.4"
h2 = "^4.1.0"
incremental = "^21.3.0"
Jinja2 = "^3.1.2"
lmdb = "^1.3.0"
mistune = "^2.0.4"
netaddr = "^0.8.0"
passlib = "^1.7.4"
priority = "^2.0.0"
psutil = "^5.9.1"
py-ubjson = "^0.16.1"
pyasn1-modules = "^0.2.8"
pyasn1 = "^0.4.8"
Pygments = "^2.13.0"
PyNaCl = "^1.5.0"
pyOpenSSL = "^22.0.0"
PyQRCode = "^1.2.1"
PyTrie = "^0.4.0"
PyYAML = "^6.0"
sdnotify = "^0.3.2"
service-identity = "^21.1.0"
setproctitle = "^1.3.2"
setuptools = "^65.0.1"
treq = "^22.2.0"
txaio = "^22.2.1"
txtorcon = "^22.0.0"
urllib3 = "^1.26.11"
watchdog = "^2.1.9"
Werkzeug = "^2.2.2"
wsaccel = "^0.6.3"
zlmdb = "^22.6.1"
appdirs = "^1.4.4"
argon2-cffi = "^21.3.0"
Automat = "^20.2.0"
bcrypt = "^3.2.2"
certifi = "^2022.6.15"
chardet = "^5.0.0"
colorama = "^0.4.5"
hpack = "^4.0.0"
hyperframe = "^6.0.1"
idna = "^3.3"
msgpack = "^1.0.4"
pathtools = "^0.1.2"
pycparser = "^2.21"
PyHamcrest = "^2.0.4"
pytz = "^2022.2.1"
six = "^1.16.0"
sortedcontainers = "^2.4.0"
Twisted = "^22.4.0"
ujson = "^5.4.0"
hyperlink = "^21.0.0"
MarkupSafe = "^2.1.1"
requests = "^2.28.1"
cbor2 = "^5.4.3"
u-msgpack-python = "^2.7.1"
tox = "^3.25.1"

[tool.poetry.dev-dependencies]
black = "*"
pipenv-to-requirements = "*"
pre-commit = "*"
pylint = "*"
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
crossbar = "crossbar:run"
